[package]
authors = ["Interlay Ltd"]
build = "build.rs"
edition = "2021"
name = "interbtc-parachain"
version = "1.2.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[[bin]]
name = "interbtc-parachain"

[build-dependencies]
substrate-build-script-utils = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.31" }

[dependencies]
clap = { version = "4.0.9", features = [ "derive" ] }
log = "0.4.8"
codec = { package = "parity-scale-codec", version = "3.1.5" }
serde = { version = "1.0.130", features = ["derive"] }
hex-literal = "0.2.1"
futures = "0.3.15"
jsonrpsee = { version = "0.16.2", features = ["server", "macros"] }
serde_json = "1.0.68"
regex = "1.5.6"

# Parachain dependencies
interlay-runtime = { package = "interlay-runtime-parachain", path = "./runtime/interlay" }
kintsugi-runtime = { package = "kintsugi-runtime-parachain", path = "./runtime/kintsugi" }
testnet-kintsugi-runtime = { package = "testnet-kintsugi-runtime-parachain", path = "./runtime/testnet-kintsugi" }
testnet-interlay-runtime = { package = "testnet-interlay-runtime-parachain", path = "./runtime/testnet-interlay" }
runtime-common = { package = "runtime-common", path = "./runtime/common" }
interbtc-rpc = { path = "../rpc" }
bitcoin = { path = "../crates/bitcoin" }
loans = { path = "../crates/loans" }
primitives = { package = "interbtc-primitives", path = "../primitives" }

btc-relay-rpc-runtime-api = { path = "../crates/btc-relay/rpc/runtime-api" }
oracle-rpc-runtime-api = { path = "../crates/oracle/rpc/runtime-api" }
vault-registry-rpc-runtime-api = { path = "../crates/vault-registry/rpc/runtime-api" }
escrow-rpc-runtime-api = { path = "../crates/escrow/rpc/runtime-api" }
reward-rpc-runtime-api = { path = "../crates/reward/rpc/runtime-api" }
issue-rpc-runtime-api = { path = "../crates/issue/rpc/runtime-api" }
redeem-rpc-runtime-api = { path = "../crates/redeem/rpc/runtime-api" }
replace-rpc-runtime-api = { path = "../crates/replace/rpc/runtime-api" }
loans-rpc-runtime-api = { path = "../crates/loans/rpc/runtime-api" }
dex-general-rpc-runtime-api = { path = "../crates/dex-general/rpc/runtime-api" }
dex-stable-rpc-runtime-api = { path = "../crates/dex-stable/rpc/runtime-api" }

# Substrate dependencies
sc-cli = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.31" }
sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.31" }
sc-consensus = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.31" }
sc-consensus-manual-seal = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.31" }
sc-executor = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.31" }
sc-rpc = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.31" }
sc-service = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.31" }
sc-telemetry = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.31" }
sc-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.31" }
sp-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.31" }
sc-network = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.31" }
sc-basic-authorship = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.31" }
sc-chain-spec = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.31" }
sc-tracing = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.31" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.31" }
sp-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.31" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.31" }
sp-inherents = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.31" }
sp-consensus = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.31" }
sp-consensus-aura = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.31" }
sp-session = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.31" }
sp-offchain = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.31" }
sp-block-builder = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.31" }
sp-keystore = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.31" }
sp-keyring = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.31" }
sp-timestamp = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.31" }
sp-arithmetic = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.31" }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.31" }
substrate-prometheus-endpoint = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.31" }
sc-network-sync = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.31" }
pallet-transaction-payment-rpc = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.31" }
substrate-frame-rpc-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.31" }

frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.31", default-features = false }
frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.31" }
frame-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.31" }
frame-benchmarking-cli = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.31" }
pallet-transaction-payment = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.31", default-features = false }

try-runtime-cli = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.26", optional = true }

# Cumulus dependencies
cumulus-client-cli = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.31" }
cumulus-client-consensus-aura = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.31" }
cumulus-client-consensus-relay-chain = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.31" }
cumulus-client-consensus-common = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.31" }
cumulus-client-collator = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.31" }
cumulus-client-service = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.31" }
cumulus-client-network = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.31" }
cumulus-primitives-core = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.31" }
cumulus-primitives-parachain-inherent = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.31" }
cumulus-test-relay-sproof-builder = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.31" }
cumulus-pallet-parachain-system = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.31" }
cumulus-relay-chain-interface = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.31" }
cumulus-relay-chain-inprocess-interface = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.31" }
cumulus-relay-chain-rpc-interface = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.31" }
cumulus-relay-chain-minimal-node = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.31" }

# Polkadot dependencies
polkadot-primitives = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.31" }
polkadot-cli = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.31" }
polkadot-service = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.31" }
polkadot-parachain = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.31" }

[features]
default = []

try-runtime = [
    "try-runtime-cli", 
    "try-runtime-cli/try-runtime", 
    "interlay-runtime/try-runtime",
    "kintsugi-runtime/try-runtime",
    "testnet-interlay-runtime/try-runtime",
    "testnet-kintsugi-runtime/try-runtime",
    "runtime-common/try-runtime",
    "frame-system/try-runtime",
    "pallet-transaction-payment/try-runtime"
]

rococo-native = [ "polkadot-cli/rococo-native" ]
runtime-benchmarks = [
    "frame-system/runtime-benchmarks",
    "interlay-runtime/runtime-benchmarks",
    "kintsugi-runtime/runtime-benchmarks",
    "testnet-interlay-runtime/runtime-benchmarks",
    "testnet-kintsugi-runtime/runtime-benchmarks",
    "polkadot-service/runtime-benchmarks",
    "polkadot-cli/runtime-benchmarks",
]
