[package]
authors = ["Interlay Ltd"]
edition = "2021"
name = "interbtc-primitives"
version = "1.2.0"

[dependencies]
bstringify = "0.1.2"
serde = { version = "1.0.130", optional = true }
codec = { package = "parity-scale-codec", version = "3.1.5", default-features = false }
scale-info = { version = "2.2.0", default-features = false, features = ["derive"] }

sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.31", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.31", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.31", default-features = false }
xcm = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.31", default-features = false }

# Parachain dependencies
bitcoin = { path = "../crates/bitcoin", default-features = false }

# Zenlink dependencies
zenlink-protocol = { git = "https://github.com/interlay/Zenlink-DEX-Module", rev = "8d120c4a41e977892b8e4e6067c7832973048341", default-features = false }

[features]
default = ["std"]
std = [
    "serde",
    "codec/std",

    "sp-core/std",
    "sp-std/std",
    "sp-runtime/std",

    "bitcoin/std",

    "zenlink-protocol/std",
]
