[package]
authors = ["Interlay Ltd"]
edition = "2021"
name = "interbtc-rpc"
version = "1.2.0"

[dependencies]
futures = "0.3.21"
jsonrpsee = { version = "0.15.1", features = ["server", "macros"] }

# Parachain dependencies
module-btc-relay-rpc = { path = "../crates/btc-relay/rpc" }
module-oracle-rpc = { path = "../crates/oracle/rpc" }
module-vault-registry-rpc = { path = "../crates/vault-registry/rpc" }
module-issue-rpc = { path = "../crates/issue/rpc" }
module-redeem-rpc = { path = "../crates/redeem/rpc" }
module-replace-rpc = { path = "../crates/replace/rpc" }
module-escrow-rpc = { path = "../crates/escrow/rpc" }
module-reward-rpc = { path = "../crates/reward/rpc" }
pallet-loans-rpc = { path = "../crates/loans/rpc" }

vault-registry = { path = "../crates/vault-registry" }
primitives = { package = "interbtc-primitives", path = "../primitives" }

# Substrate dependencies
sc-rpc = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30" }
sc-rpc-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30" }
sc-transaction-pool-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30" }
sc-consensus-manual-seal = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30" }
sp-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30" }
sp-arithmetic = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30" }
sp-block-builder = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30" }

pallet-transaction-payment-rpc = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30" }
substrate-frame-rpc-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30" }
