[package]
name = "bitcoin"
version = "0.11.0"
authors = ["Interlay Ltd"]
edition = "2018"

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
serde = { version = "1.0.119", default-features = false, features = ["derive"], optional = true }
impl-serde = { version = "0.3.1", default-features = false, optional = true }
sha2 = { version = "0.8.2", default-features = false }
hex = { version = "0.4.2", default-features = false }
bitcoin_hashes = { version = "0.7.3", default-features = false }
secp256k1 = { package = "secp256k1", git = "https://github.com/rust-bitcoin/rust-secp256k1", rev = "8e61874", default-features = false }
spin = { version = "0.7.1", default-features = false }

# Substrate dependencies
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.8", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.8", default-features = false }
frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.8", default-features = false }

[dev-dependencies]
mocktopus = "0.7.0"
secp256k1 = { package = "secp256k1", git = "https://github.com/rust-bitcoin/rust-secp256k1", rev = "8e61874", default-features = false, features = ["rand-std"] }

[features]
default = ["std"]
std = [
	"codec/std",
	"serde",
	"impl-serde",
	"sha2/std",
	"hex/alloc",
	"secp256k1/std",

	"sp-core/std",
	"sp-std/std",
	"frame-support/std",
]
