[package]
name = "bitcoin"
version = "1.2.0"
authors = ["Interlay Ltd"]
edition = "2018"

[dependencies]
codec = { package = "parity-scale-codec", version = "2.2.0", default-features = false, features = ["derive", "max-encoded-len"] }
scale-info = { version = "1.0.0", default-features = false, features = ["derive"] }
serde = { version = "1.0.130", default-features = false, features = ["derive"], optional = true }
impl-serde = { version = "0.3.1", default-features = false, optional = true }
sha2 = { version = "0.8.2", default-features = false }
hex = { version = "0.4.2", default-features = false }
bitcoin_hashes = { version = "0.7.3", default-features = false }
secp256k1 = { version = "0.21.2", default-features = false }
spin = { version = "0.7.1", default-features = false }
sp-io = { default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "monthly-2021-11-1", version = "4.0.0-dev" }

# Substrate dependencies
sp-core = { git = "https://github.com/paritytech/substrate", default-features = false, tag = "monthly-2021-11-1", version = "4.0.0-dev" }
sp-std = { git = "https://github.com/paritytech/substrate", default-features = false, tag = "monthly-2021-11-1", version = "4.0.0-dev" }
frame-support = { git = "https://github.com/paritytech/substrate", default-features = false, tag = "monthly-2021-11-1", version = "4.0.0-dev" }

[dev-dependencies]
mocktopus = "0.7.0"
secp256k1 = { version = "0.21.2", default-features = false }

[features]
default = ["std"]
std = [
	"codec/std",
	"serde",
	"impl-serde",
	"sha2/std",
	"hex/alloc",
	"secp256k1/std",

	"sp-core/std",
	"sp-std/std",
	"frame-support/std",
]
