[package]
name = "btc-core"
version = "0.1.0"
authors = ["Interlay Ltd"]
edition = "2018"

[features]
default = ['std']
std = [
  'sp-runtime/std',
  'frame-support/std',
]

[dependencies.sp-runtime]
default-features = false
version = '2.0.0-alpha.5'

[dependencies.frame-support]
default-features = false
version = '2.0.0-alpha.5'