[package]
name = "btc-relay"
version = '0.3.2'
authors = ['Interlay Ltd <contact@interlay.io>']
edition = "2018"

[dependencies]
codec = { package = "parity-scale-codec", version = "1.3.4", default-features = false, features = ['derive'] }
serde = { version = "1.0.101", default-features = false, features = ['derive'], optional = true }
hex = { version = "0.4.2", default-features = false }
primitive-types = { version = "0.7.2", default-features = false, features = ["codec"] }

# Substrate dependencies
sp-io = { version = "2.0.0", default-features = false }
sp-core = { version = "2.0.0", default-features = false }
sp-std = { version = "2.0.0", default-features = false }
sp-arithmetic = { version = "2.0.0", default-features = false }

frame-support = { version = "2.0.0", default-features = false }
frame-system = { version = "2.0.0", default-features = false }
frame-benchmarking = { version = "2.0.0", default-features = false, optional = true }
pallet-timestamp = { version = "2.0.0", default-features = false }

# Parachain dependencies
bitcoin = { path = "../bitcoin", default-features = false }
sla = { path = "../sla", default-features = false }
security = { path = "../security", default-features = false }
util = { path = "../util", default-features = false }

[dev-dependencies]
mocktopus = "0.7.0"
frame-benchmarking = { version = "2.0.0", default-features = false }
sp-runtime = { version = "2.0.0", default-features = false }
pallet-balances = { version = "2.0.0", default-features = false }
pallet-randomness-collective-flip = { version = "2.0.0", default-features = false }

vault-registry = { path = "../vault-registry", default-features = false }
collateral = { path = "../collateral", default-features = false }
treasury = { path = "../treasury", default-features = false }
exchange-rate-oracle = { path = "../exchange-rate-oracle", default-features = false }

[features]
default = ["std"]
no-btc = []
std = [
    "serde",
    "codec/std",
    "hex/std",
    "primitive-types/std",
    "sp-io/std",
    "sp-core/std",
    "sp-std/std",
    "sp-arithmetic/std",
    "frame-support/std",
    "frame-system/std",
    "frame-benchmarking/std",
    "pallet-timestamp/std",
    "bitcoin/std",
    "sla/std",
    "security/std",
    "util/std",
]
runtime-benchmarks = [
	"frame-benchmarking",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
]
